# Clase-Git

Api_NoSQL/: .gitignore
Colecciones_MongoDB/: Ejercicio.py
Ejercicio Practico/: Base de datos.py  Ejercicio Practico.py
Ejercicios Bases de datos/: Tablas en MongoDB.py  Tablas en MySQL.py  Tablas en Postgres.py
Ejercicios C/: 1. Bucles for.cpp  10.Ley Ohm.cpp  11.Listas.cpp  12.Operaciones.cpp  13.Tabla de la verdad.cpp  14.Variables.cpp  2.Bucles while.cpp  3.Cajero.cpp  4.Ciclo for.cpp  5.Condicionales If Else.cpp  6.Condicionales.cpp  7.Diccionario.cpp  8.Funciones.cpp  9.Interaccion usuarios.cpp
Ejercicios GO/: 1.Bucle for.go  10.Ley Ohm.go  11.Listas.go  12.Operaciones.go  13.Tabla verdad.go  14.Variables.go  2.Bucle while.go  3.Cajero.go  4.Ciclo for.go  5.Condicionales if else.go  6.Condicionales.go  7.Diccionario.go  8.Funciones.go  9.Interaccion usuario.go  Hola mundo.go
Ejercicios Java/: Bucle_for.java  Bucles_while.java  Cajero.java  Ciclo_for.java  Condicionales.java  Condicionales_if_else.java  Diccionario.java  Funciones.java  Interaccion_Usuarios.java  Ley_Ohm.java  Listas.java  Operaciones.java  Tabla_verdad.java  Variables.java
Ejercicios JavaScript/: 1.Bucles for.js  10.Ley Ohm.js  11.Listas.js  12.Operaciones.js  13.Tabla de la verdad.js  14.Variables.js  2.Bucles while.js  3.Cajero.js  4.Ciclo for.js  5.Condicionales if else.js  6.Condicionales.js  7.Diccionario.js  8.Funciones.js  9.Interaccion usuarios.js
ProyectoMongoDB/: CMakeLists.txt
ProyectoMongoDB/include/: MongoDBConnection.h
ProyectoMongoDB/src/: main.cpp
(+94 files in other folders)
